# martinmorep.com.backend

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  migrate.sh  pyproject.toml  yoyo.ini
app/: __init__.py  main.py  models.py  utils.py
app/api/: admin.py  main.py  post.py  project.py  snippet.py
app/sdk/: s3_client.py
migrations/: 20230511_01_Lv5CO-create-tables-post-project-snippet.py
