[tool.poetry]
name = "martinmorep-com-backend"
version = "0.1.0"
description = ""
authors = ["Martin More <martinmore@gmail.com>"]
readme = "README.md"
packages = [{include = "martinmorep"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-jwt-extended = "^4.4.4"
yoyo-migrations = "^8.2.0"
psycopg2-binary = "^2.9.6"
flask-sqlalchemy = "^3.0.3"
flask-cors = "^3.0.10"
boto3 = "^1.26.133"
gunicorn = "^20.1.0"


[tool.poetry.group.linters.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
